[package]
name = "hoof"
version = "0.0.4"
description = "A Ollama client written in Rust"
authors = ["Dax911", "sammcj", "simoncollins"]
license = "MIT"
repository = "https://github.com/hoof-ai/hoof/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "api-all"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.22"
tokio = "1.33.0"
thiserror = "1.0.50"

[target."cfg(target_os = \"macos\")".dependencies]
core-graphics = {version = "0.23"}
core-foundation = { version = "0.9.3" }
cocoa = { version = "0.25" }
objc =  { version = "0.2.7" }
objc_id = {version = "0.1.1" }
objc-foundation = { version = "0.1.1" }

[target."cfg(target_os = \"macos\")".package.metadata.tauri.bundle]
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin", "universal-apple-darwin"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
default = ["custom-protocol"]
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
